--- a/docs/modules/operation/pages/deep-dive/provisioning/scalability.adoc
+++ b/docs/modules/operation/pages/deep-dive/provisioning/scalability.adoc
@@ -90,9 +90,9 @@ You can also disable this scan by setting `scan-interval` to `-1`.
 
 === Tuning DNS reverse lookups
 
-During the provisioning process hostnames are determined for each interface IP address by a DNS reverse lookups.
+During the provisioning process hostnames are determined for each interface IP address by DNS reverse lookups.
 A thread pool is used to allow concurrent DNS lookups.
-This thread pool can be configured by the following properties:
+You can use the following properties to configure this thread pool:
 
 .Thread pool configuration parameters for DNS lookups
 [options="header"]
@@ -104,13 +104,11 @@ This thread pool can be configured by the following properties:
 
 | org.opennms.netmgt.provision.dns.client.rpc.maxThreadPoolSize
 | Maximum thread pool size.
-|
-64
+| 64
 | org.opennms.netmgt.provision.dns.client.rpc.queueCapacity
 | Maximum queue size for pending DNS lookups.
-|
-4096
+| 4096
 |===
 
-NOTE: DNS reverse lookups can be disabled completely by setting the property `org.opennms.provisiond.reverseResolveRequisitionIpInterfaceHostnames` to `false`.
+NOTE: To completely disable DNS reverse lookups, set the property `org.opennms.provisiond.reverseResolveRequisitionIpInterfaceHostnames` to `false`.
 
