DP-58: Fix internal HTTP links
Updated internal links that pointed to HTTP.
DP-63: Add meta descriptions to each page in the deployment guide - began to add descriptions for better SEO.

--- a/docs/modules/deployment/pages/core/admin-password-reset.adoc
+++ b/docs/modules/deployment/pages/core/admin-password-reset.adoc
@@ -1,6 +1,7 @@
 
 [[reset-admin-password]]
 = Reset the Web UI Admin Password
+:description: Learn how to reset your OpenNMS Admin password on the command line.
 
 This section explains how to set the web UI admin password using the {page-component-title} installation script.
 
