--- a/docs/modules/deployment/pages/core/introduction.adoc
+++ b/docs/modules/deployment/pages/core/introduction.adoc
@@ -1,6 +1,7 @@
 
 [[basic-deployment]]
 = OpenNMS {page-component-title}
+:description: OpenNMS installation overview: PostgreSQL, REST endpoints, monitoring functions, provisioning, and web interface. OpenNMS architecture diagram.
 
 A basic {page-component-title} deployment installs and configures the core software, which includes PostgreSQL, REST endpoints, monitoring functions, provisioning, and the web interface.
 It also includes a set of xref:reference:daemons/introduction.adoc[daemons] for specific network management use cases.
