--- a/docs/modules/deployment/pages/minion/system-requirements.adoc
+++ b/docs/modules/deployment/pages/minion/system-requirements.adoc
@@ -1,6 +1,7 @@
 
 [[system-requirements-minion]]
 = Minimum System Requirements
+:description: Minimum requirements for OpenNMS Minion, including operating systems.
 
 The following hardware specs are the minimum required to run a Minion:
 
