DP-58: Fix internal HTTP links
DP-58: Fix internal HTTP links - updated internal HTTP links that should have been HTTPS.
DP-57: Add meta descriptions to each page in the deployment guide - added meta descriptions for each page in the deployment guide for better SEO. Did not add meta tag for pages that do not have H1, as these will be excluded in a future Jira.

--- a/docs/modules/deployment/pages/minion/introduction.adoc
+++ b/docs/modules/deployment/pages/minion/introduction.adoc
@@ -1,6 +1,6 @@
 
 = Minion
-:description: Learn about the OpenNMS Minion: benefits, how it works, with architecture diagram with three Minions.
+:description: Learn about the OpenNMS Minion: benefits, how it works. Includes architecture diagram with three Minions.
 
 A Minion is an instance of the Karaf OSGi runtime that enables {page-component-title} to monitor devices and services in locations that it otherwise cannot reach.
 Minions communicate with these remote devices while {page-component-title} performs coordination and task delegation.
