--- a/docs/modules/deployment/pages/sentinel/runtime/install.adoc
+++ b/docs/modules/deployment/pages/sentinel/runtime/install.adoc
@@ -1,5 +1,6 @@
 [[install-sentinel]]
-= Installing Sentinel Runtime
+= Install Sentinel Runtime
+:description: Set up OpenNMS Sentinel (for scaling and streaming telemetry) on RHEL, CentOS, Debian, and Ubuntu.
 
 [[objectives]]
 == Objectives
