--- a/docs/modules/deployment/pages/upgrade/restore/introduction.adoc
+++ b/docs/modules/deployment/pages/upgrade/restore/introduction.adoc
@@ -1,5 +1,6 @@
 [[restore]]
 = Restore OpenNMS {page-component-title}
+:description: How to restore OpenNMS Horizon or Meridian components, including installing a PostgreSQL database and OpenJDK.
 
 This section describes a basic restore process for a default OpenNMS {page-component-title} xref:deployment:core/getting-started.adoc#getting-started-core[installation].
 OpenNMS {page-component-title} binaries, logs, RRD archives, configurations and the database will be restored.
