--- a/docs/modules/deployment/pages/sentinel/introduction.adoc
+++ b/docs/modules/deployment/pages/sentinel/introduction.adoc
@@ -1,4 +1,12 @@
 = Sentinel
+:description: Scale your network monitoring with OpenNMS Sentinel and support streaming telemetry with OpenNMS Newts on RHEL, CentOS, Debian, and Ubuntu.
+
+[[objectives]]
+== Objectives
+
+* Setting up a {page-component-title} Sentinel running on one of the following <<minion/system-requirements.adoc#operating-systems-Core, Operating Systems>>
+* Secure access with encrypted passwords to the Karaf shell
+* Sentinel can be configured with the Karaf Shell from th
 
 Sentinel provides scalability for data processing of flows and streaming telemetry received by one or more Minions.
 It also supports thresholding for streaming telemetry if you are using OpenNMS xref:deployment:time-series-storage/newts/introduction.adoc#ga-opennms-operation-newts[Newts].
