--- a/docs/modules/deployment/pages/time-series-storage/newts/introduction.adoc
+++ b/docs/modules/deployment/pages/time-series-storage/newts/introduction.adoc
@@ -1,6 +1,7 @@
 
 [[ga-opennms-operation-newts]]
 = Newts
+:description: Introduction to OpenNMS Newts, a time-series data store based on Apache Cassandra, for horizontal scaling.
 
 link:http://newts.io/[Newts] is a time series data schema for link:http://cassandra.apache.org/[Apache Cassandra].
 It enables link:https://en.wikipedia.org/wiki/Scalability#Horizontal[horizontal scaling] for your time series database and is an alternative to link:https://github.com/OpenNMS/jrobin[JRobin] and link:http://oss.oetiker.ch/rrdtool/[RRDtool].
