--- a/docs/modules/deployment/pages/time-series-storage/timeseries/time-series-storage.adoc
+++ b/docs/modules/deployment/pages/time-series-storage/timeseries/time-series-storage.adoc
@@ -1,6 +1,7 @@
 
 [[time-series-storage]]
 = Time Series Database
+:description: Overview of OpenNMS time series database options: JRobin, RRDtool, Newts, ONMS Time Series DB (Meridian only). Plugins and parallel series writes.
 
 {page-component-title} stores performance data in a time series database (JRobin by default).
 For different scenarios you may want to use a different time series database.
@@ -13,13 +14,13 @@ The following implementations are installed by default:
 | Time Series Database  | Description
 
 | JRobin
-| JRobin is a clone of RRDTool written in Java and is the default time series database when you install {page-component-title}.
-It does not fully cover the latest RRDTool feature set.
+| JRobin is a clone of RRDtool written in Java and is the default time series database when you install {page-component-title}.
+It does not fully cover the latest RRDtool feature set.
 Data is stored on the local file system of the {page-component-title} node.
 Depending on I/O capabilities, it works well for small- to medium-size installations.
 
-| RRDTool
-| RRDTool is actively maintained and the de-facto standard for time series data.
+| RRDtool
+| RRDtool is actively maintained and the de-facto standard for time series data.
 Data is stored on the local file system of the {page-component-title} node.
 Depending on I/O capabilities it works well for small- to medium-size installations.
 
@@ -39,7 +40,7 @@ For more information, see xref:time-series-storage/timeseries/hosted-tss.adoc[].
 endif::[]
 |===
 
-This chapter describes how to configure {page-component-title} to use RRDTool, Newts, and the OpenNMS Time Series DB.
+This chapter describes how to configure {page-component-title} to use RRDtool, Newts, and the OpenNMS Time Series DB.
 
 == Time series database plugins
 
