Apply suggestions from code review
Co-authored-by: Bonrob2 <59453630+Bonrob2@users.noreply.github.com>

--- a/docs/modules/reference/pages/service-assurance/monitors/VmwareMonitor.adoc
+++ b/docs/modules/reference/pages/service-assurance/monitors/VmwareMonitor.adoc
@@ -17,7 +17,8 @@ The VmwareMonitor requires that hosts be imported using provisiond and the VMwar
 
 The credentials for accessing the status of a VMware entity are collected from the appropriate vCenter instance using settings from `$\{OPENNMS_HOME}/etc/vmware-config.xml`.
 
-NOTE: Meta-data expressions can also be used in the username and password attributes of the `vmware-config.xml` configuration file. This allows the user to also reference credentials stored in the secure credentials vault.
+NOTE: Metadata expressions can also be used in the username and password attributes of the `vmware-config.xml` configuration file. 
+This allows the user to also reference credentials stored in the secure credentials vault.
 
 This file also sets specific asset fields to be assigned to imported virtual machines and host systems.
 
