DP-64: Add meta descriptions to each page in the operation guide.
Added meta descriptions in the operations section of the OpenNMS documentation: overview, quick start, user management, provisioning, thresholding.

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,6 +1,7 @@
 
 [[welcome]]
 = Welcome to the {page-component-title} Documentation
+:description: Overview of OpenNMS Horizon/Meridian documentation including product architecture diagram and how to navigate the documentation.
 
 [options="autowidth"]
 |===
