--- a/docs/modules/operation/pages/deep-dive/provisioning/fine-grained.adoc
+++ b/docs/modules/operation/pages/deep-dive/provisioning/fine-grained.adoc
@@ -1,4 +1,5 @@
 = Fine-Grained provisioning using provision.pl
+:description: How to use the provision.pl script for fine-grained provisioning in OpenNMS Horizon/Meridian.
 
 `provision.pl` provides an example command-line interface to the provisioning-related {page-component-title} REST API endpoints.
 
