--- a/docs/modules/operation/pages/deep-dive/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/introduction.adoc
@@ -1,2 +1,5 @@
 
 = Deep Dive
+:description: Overview of deep-dive section that provides in-depth procedures on OpenNMS Horizon/Meridian tasks and features.
+
+This section provides in-depth procedures on many {page-component-title} tasks and features.
