--- a/docs/modules/operation/pages/deep-dive/provisioning/auto-discovery.adoc
+++ b/docs/modules/operation/pages/deep-dive/provisioning/auto-discovery.adoc
@@ -1,6 +1,7 @@
 
 [[auto-discovery]]
 = Auto Discovery
+:description: How to automatically add nodes to OpenNMS Horizon/Meridian through auto discovery: detectors and configuration options.
 
 Auto discovery is the process of automatically adding nodes to {page-component-title}.
 This is done through discovery, which is run either periodically on a schedule or as one-off, unscheduled operations.
