--- a/docs/modules/operation/pages/deep-dive/provisioning/detectors.adoc
+++ b/docs/modules/operation/pages/deep-dive/provisioning/detectors.adoc
@@ -1,5 +1,6 @@
 [[ga-detectors]]
 = Detectors
+:description: Overview of detectors in OpenNMS Horizon/Meridian to detect available services on nodes automatically. Intro. to metadata domain-specific language.
 
 Use detectors within the provisioning process to detect available services on nodes automatically.
 
