--- a/docs/modules/operation/pages/deep-dive/provisioning/xml-samples.adoc
+++ b/docs/modules/operation/pages/deep-dive/provisioning/xml-samples.adoc
@@ -1,6 +1,7 @@
 
 [[xml-sample-provision]]
 = XML Samples
+:description: Sample XML configuration for provisioning tasks in OpenNMS Horizon/Meridian.
 
 This section provides sample XML configuration for many of the tasks described in the Provisioning chapter.
 
