--- a/docs/modules/operation/pages/deep-dive/user-management/security-roles.adoc
+++ b/docs/modules/operation/pages/deep-dive/user-management/security-roles.adoc
@@ -1,6 +1,7 @@
 
 [[ga-role-user-management-roles]]
 = Assign User Permissions
+:description: How to assign user permissions in OpenNMS Horizon/Meridian: default security roles (admin, RTC, asset editor, etc.) and creating custom security roles.
 
 You can control user permission levels by creating and assigning security roles.
 These roles regulate access to the {page-component-title} web UI and the REST API to exchange monitoring and inventory information.
