--- a/docs/modules/operation/pages/quick-start/notification-config.adoc
+++ b/docs/modules/operation/pages/quick-start/notification-config.adoc
@@ -1,5 +1,6 @@
 
 = Step 8: Configure Notifications
+:description: Step 8 of OpenNMS Horizon/Meridian setup: configure event notifications and create filter rules.
 
 This section describes how to configure and customize your {page-component-title} notifications.
 
