--- a/docs/modules/operation/pages/quick-start/visualize-data.adoc
+++ b/docs/modules/operation/pages/quick-start/visualize-data.adoc
@@ -1,5 +1,7 @@
 
 = Step 9: Visualize Data
+:description: Step 9 of OpenNMS Horizon/Meridian setup: how to visualize your environment's data with dashboard, surveillance view, heatmap, and trend page.
+
 
 This section describes how to visualize your environment's data (using the dashboard, graphs, and so on) in {page-component-title}.
 
