DP-64: Add meta descriptions to each page in the operation guide.
Sneaking in a few more descriptions for this PR. Service assurance now done.

--- a/docs/modules/operation/pages/deep-dive/service-assurance/polling-packages.adoc
+++ b/docs/modules/operation/pages/deep-dive/service-assurance/polling-packages.adoc
@@ -1,6 +1,7 @@
 
 [[ga-pollerd-packages]]
 = Poller Packages
+:description: How to group service configurations into polling packages to define more complex monitoring configurations with OpenNMS Horizon/Meridian.
 
 You can group service configurations into polling packages to define more complex monitoring configurations.
 This allows you to assign different service configurations to nodes.
