--- a/docs/modules/operation/pages/deep-dive/service-assurance/critical-service.adoc
+++ b/docs/modules/operation/pages/deep-dive/service-assurance/critical-service.adoc
@@ -1,6 +1,8 @@
 
 = Improve Monitoring Efficiency
 
+:description: How to improve monitoring in OpenNMS Horizon/Meridian through critical services.
+
 Monitoring services on an IP network can be resource-intensive, especially in cases where many of the services are not available.
 When a service is offline or unreachable, the monitoring system spends most of its time waiting for retries and timeouts.
 To improve efficiency, {page-component-title} deems all services on an interface to be down if the critical service is down.
