--- a/docs/modules/operation/pages/deep-dive/service-assurance/service-monitors.adoc
+++ b/docs/modules/operation/pages/deep-dive/service-assurance/service-monitors.adoc
@@ -1,5 +1,6 @@
 
 = Service Monitors
+:description: Overview of how service monitors work with OpenNMS Horizon/Meridian.
 
 The pollerd service uses service monitors to check the status of services running on nodes.
 These monitors will track if services are up or down, and will generate outages if the desired service state is not met.
