--- a/docs/modules/operation/pages/deep-dive/service-assurance/shell/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/service-assurance/shell/introduction.adoc
@@ -1,5 +1,6 @@
 
 = Shell Commands
+:description: Overview of Karaf shell commands to help administer and diagnose issues related to service assurance with OpenNMS Horizon/Meridian.
 
 A number of Karaf Shell commands are available to help administer and diagnose issues related to service assurance.
 
