--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/collectd/collect-admin.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/collectd/collect-admin.adoc
@@ -1,5 +1,6 @@
 
 = Collectd Administration
+:description: Collectd administration in OpenNMS Horizon/Meridian.
 
 This section describes reference and administrative information associated with the collectd service.
 
