--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/introduction.adoc
@@ -1,5 +1,6 @@
 
 = Shell Commands
+:description: Overview of Karaf shell commands in OpenNMS Horizon/Meridian to help administer and diagnose issues related to performance data collection.
 
 A number of Karaf Shell commands are made available to help administer and diagnose issues related to performance data collection.
 
