--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/measurements.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/measurements.adoc
@@ -1,8 +1,9 @@
 
 [[ga-performance-mgmt-measurements-shell]]
 = Measurements & Resources
+:description: Karaf Shell command in OpenNMS Horizon/Meridian that help enumerate, view, and manage measurement-related resources.
 
-The following Karaf Shell commands are made available to help enumerate, view and manage measurement related resources.
+The following Karaf Shell commands are made available to help enumerate, view, and manage measurement-related resources.
 
 The `opennms:show-measurement-resources` command can be used to enumerate or lookup resources:
 
