--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/snmp-property-extenders/cisco-cbqos.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/snmp-property-extenders/cisco-cbqos.adoc
@@ -1,5 +1,6 @@
 = Cisco CBQoS property extender
 This property extender is used only in very specific circumstances.
+:description: Cisco CBQoS property extender in OpenNMS Horizon/Meridian to include string properties across `ifXTable` and some MIB tables.
 
 == When to use Cisco CBQoS property extender
 
