--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/snmp-property-extenders/enum-lookup.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/snmp-property-extenders/enum-lookup.adoc
@@ -1,4 +1,6 @@
 = Enum Lookup property extender
+:description: Enum lookup property extender in OpenNMS Horizon/Meridian to map an enumerated set of integer values to a corresponding set of human-readable text values.
+
 The Enum Lookup property extender provides a mechanism that works like a lookup table for values of a local MIB table column.
 
 == When to use the Enum Lookup property extender
