--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/snmp-property-extenders/index-split.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/snmp-property-extenders/index-split.adoc
@@ -1,4 +1,5 @@
 = Index Split Property Extender
+:description: Index Split property extender in OpenNMS Horizon/Meridian to enable extraction of part of a resource's local instance identifier.
 
 The Index Split property extender enables extraction of part of a resource's local instance identifier.
 
