--- a/docs/modules/operation/pages/deep-dive/device-config-backup/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/device-config-backup/introduction.adoc
@@ -1,6 +1,6 @@
 
 = Device Configuration Backup
-:description: Overview of how to back up configuration for devices like routers, firewalls, and switches with OpenNMS Horizon/Meridian, for better disaster recovery.
+:description: Back up configuration for devices like routers, firewalls, switches with OpenNMS Horizon/Meridian, for better disaster recovery and change management.
 
 OpenNMS lets you back up the configuration of devices like routers, firewalls, and switches.
 This allows for a better disaster recovery framework in the case of network failure.
