--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/adhoc-collection.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/adhoc-collection.adoc
@@ -1,7 +1,7 @@
 
 [[ga-performance-mgmt-adhoc-collection]]
 = Ad hoc collection
-:description: opennms:collect Karaf Shell command in OpenNMS Horizon/Meridian to trigger and perform a collection on any of the available collectors.
+:description: Ad hoc collection commands in Horizon/Meridian via Karaf shell to perform a collection on any available collectors for troubleshooting and testing.
 
 The `opennms:collect` Karaf Shell command can be used to trigger and perform a collection on any of the available collectors.
 
