--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/collectd-schedule.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/collectd-schedule.adoc
@@ -2,7 +2,7 @@
 [[ga-performance-mgmt-schedule-shell]]
 
 = Collectd Schedule
-:description: opennms:pollerd-schedule Karaf Shell command to output details of the Collectd scheduler.
+:description: Overview of Karaf shell commands in OpenNMS Horizon/Meridian to help administer and diagnose issues related to performance data collection scheduling.
 
 The `opennms:pollerd-schedule` Karaf Shell command can be used to output details of the Collectd scheduler.
 
