--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+opennms (32.0.1-1) stable; urgency=medium
+
+  * Minor release containing several bug fixes and documentation improvements.
+
+    For details on what has changed, see:
+    https://docs.opennms.com/horizon/32.0.1/index.html
+
+ -- OpenNMS Release Manager <opennms@opennms.org>  Tue, 11 Jul 2023 12:42:14 -0400
+
 opennms (32.0.0-1) stable; urgency=medium
 
   * Major release, with a number of new features and bug fixes.
