--- a/docs/modules/operation/pages/deep-dive/provisioning/scalability.adoc
+++ b/docs/modules/operation/pages/deep-dive/provisioning/scalability.adoc
@@ -93,23 +93,7 @@ You can also disable this scan by setting `scan-interval` to `-1`.
 
 During the provisioning process hostnames are determined for each interface IP address by DNS reverse lookups.
 A thread pool is used to allow concurrent DNS lookups.
-You can use the following properties to configure this thread pool:
-
-.Thread pool configuration parameters for DNS lookups
-[options="header"]
-[cols="1,3,2"]
-|===
-| Parameter
-| Description
-| Default value
-
-| org.opennms.netmgt.provision.dns.client.rpc.maxThreadPoolSize
-| Maximum thread pool size.
-| 64
-| org.opennms.netmgt.provision.dns.client.rpc.queueCapacity
-| Maximum queue size for pending DNS lookups.
-| 4096
-|===
+You can use the property `org.opennms.netmgt.provision.dns.client.rpc.threadCount` to configure the thread pool's fixed size (default 64).
 
 NOTE: To completely disable DNS reverse lookups, set the property `org.opennms.provisiond.reverseResolveRequisitionIpInterfaceHostnames` to `false`.
 
